--- a/extension/package.json
+++ b/extension/package.json
@@ -7,7 +7,8 @@
     "dev": "webpack --mode development --watch",
     "lint": "eslint .",
     "generate-icons": "node generateIcons.js",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "node generateIcons.js"
   },
   "author": "Chirag Singhal",
   "license": "MIT",
@@ -16,12 +17,12 @@
     "@babel/preset-env": "^7.23.5",
     "babel-jest": "^29.7.0",
     "babel-loader": "^9.1.3",
-    "canvas": "^2.11.2",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.1",
     "eslint": "^8.55.0",
     "html-webpack-plugin": "^5.5.3",
     "jest": "^29.7.0",
+    "sharp": "^0.33.2",
     "style-loader": "^3.3.3",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
